CHANGES IN VERSION 2.2.20
-------------------------
BUG FIX
    o Avoid wrongly naming columns in `annovarToMaf` Issue: #457
    o Duplicated color code Issue: #452
    o oncoplot with exprsTbl leads to wrong alignment Issue: #451
    o plotMafSummary with single sample Issue: #449
    o Avoid empty spaces and quoates while reading funcotator MAF Issue: #403 #397

ENHANCEMENTS
    o Added support for highlighting multiple additionalFeatures Issue: #476
    o Pairwise t-test and muttaional load in `tcgaCompare` Issue: #453
    o Added `titleText` argument to `oncoplot` Issue: #448
    o Highlight mutated genes on gisticChromplot Issue: #443
    o Added `legend_height` argument to `oncoplot` Issue: #346

CHANGES IN VERSION 2.2.10
-------------------------
BUG FIX
    o Avoid in place class conversion for data.frames Issue: #432
    o Fix vignette entry Issue: #442

ENHANCEMENTS
    o Improvised estimateSignatures function Issue: #433
    o Added clinQuery argument to `subsetMaf` function Issue: #423
    o Improvised somaticInteractions. Better plot and displays counts Issue: #418, #420


CHANGES IN VERSION 2.2.0
-------------------------
NEW FUNCTIONS AND FEATURES
    o `survGroup`, `mafSurvGroup` - Predict genes/genesets associated with survival. Issue: #396
    o New argument `altered` in `oncoplot` to plot top genes based on CNV or mutation. Default is `FALSE`. Issue: #405

DEPRECATED
    o `oncotate` - Oncotator is no longer supported by Broad. Issue: #403 #384 #381
    o `findPathways` argument in `somaticInteractions` function has been deprecated

SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Signature analysis has been modified to be more flexible. It now consits of three functions namely:
        o `estimateSignatures` - which measures cophenetic correlation metric (a measure of goodness of fit) for a range of values